# module_iris

./: .gitignore  README.md  setup.py
dvb-tx-iris/: AUTHORS  CMakeLists.txt  COPYRIGHT  README.md
dvb-tx-iris/cmake/modules/: DvbTxIrisModulesPackage.cmake
dvb-tx-iris/components/gpp/phy/: CMakeLists.txt
dvb-tx-iris/components/gpp/phy/Dvbt1Puncturer/test/: CMakeLists.txt  Dvbt1PuncturerComponent_test.cpp  puncturing.m
dvb-tx-iris/components/gpp/stack/: CMakeLists.txt
dvb-tx-iris/controllers/: CMakeLists.txt
dvb-tx-iris/doc/: Doxyfile  Main_Page.txt
dvb-tx-iris/doc/images/: figures.odg
dvb-tx-iris/examples/dvbt/: config.iris  demo_highest_2K.xml  demo_highest_8K.xml  demo_low_2K.xml  demo_low_8K.xml  demo_lowest_2K.xml  demo_lowest_8K.xml  demo_medium_8K.xml  demo_mediumhigh_2K.xml  demo_mediumhigh_8K.xml  demo_mediumlow_2K.xml  demo_mediumlow_8K.xml  demo_moderate_2K.xml  demo_moderate_8K.xml  demo_modmed_2K.xml  demo_modmed_8K.xml  demo_typical_2K.xml  demo_typical_8K.xml  demo_typical_8K_PL_USRP.xml  demo_typical_8K_WiSHFUL.xml  dvbt1chain_bitinterleaver.xml  dvbt1chain_convencoder.xml  dvbt1chain_convinterleaver.xml  dvbt1chain_filter_spectrum.xml  dvbt1chain_filter_usrp.xml  dvbt1chain_filter_usrp_2.xml  dvbt1chain_framer.xml  dvbt1chain_interpolator.xml  dvbt1chain_mapper.xml  dvbt1chain_noise_usrp.xml  dvbt1chain_ofdmmod.xml  dvbt1chain_ofdmmod_filter_spectrum.xml  dvbt1chain_ofdmmod_spectrum.xml  dvbt1chain_puncturer.xml  dvbt1chain_rsencoder.xml  dvbt1chain_scrambler.xml  dvbt1chain_symbolinterleaver.xml  logo_profile.txt  plot_filter.m  powerload.txt  (+1 more)
dvb-tx-iris/lib/generic/: CMakeLists.txt
dvb-tx-iris/lib/generic/utility/: CMakeLists.txt
dvb-tx-iris/scripts/: README.md
dvb-tx-iris/scripts/dvbt/: bitrate_calculator.ods
dvb-tx-iris/scripts/dvbt/MATLAB/: dvbt_channel.m  dvbt_example.m  dvbt_input_data_generation.m  (+6 more)
wishful_module_iris/: __init__.py  module_iris.py  ofdm.csv
(+96 files in other folders)
